# ghostwire

./: LICENSE  README.md  doc.config.yml  test.sh
.github/workflows/: ci.yml  cli.yml  ebpf.yml
examples/: api.yml  webserver.yml
scripts/: install.sh
src/cli/: Cargo.toml
src/cli/src/: main.rs
src/cli/src/utils/: console.rs  handler.rs  mod.rs  socket.rs  yaml.rs
src/ebpf/: Cargo.toml
src/ebpf/ghostwire/: Cargo.toml
src/ebpf/ghostwire-common/: Cargo.toml
src/ebpf/ghostwire-common/src/: lib.rs
src/ebpf/ghostwire-ebpf/: Cargo.toml
src/ebpf/ghostwire-ebpf/src/: main.rs
src/ebpf/ghostwire-ebpf/src/handlers/: egress.rs  ingress.rs
src/ebpf/ghostwire-ebpf/src/utils/: mod.rs  ptr_at.rs
src/ebpf/ghostwire/src/: main.rs
src/ebpf/ghostwire/src/utils/: bootloader.rs  ebpf.rs  map_management.rs  mod.rs  prom_http.rs  prometheus.rs  socket.rs  state.rs
src/ebpf/xtask/src/: build.rs  build_ebpf.rs  clippy.rs  main.rs  run.rs
src/types/: Cargo.toml
src/types/src/: lib.rs
